--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -53,10 +53,11 @@
         android:text="Editar"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/editText3"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <Button
         android:id="@+id/btdelete"
@@ -113,6 +114,24 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="138dp"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btGoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteY="279dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="352dp"
+        android:layout_height="156dp"
+        android:layout_marginLeft="16dp"
+        android:text="TextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="344dp" />
 
 
 </android.support.constraint.ConstraintLayout>
