--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -10,43 +10,46 @@
         android:id="@+id/disci"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Disciplina"
-        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="95dp"
-        tools:layout_constraintLeft_creator="1"
+        android:text="Disciplina"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="30dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="83dp"
         android:ems="10"
         android:inputType="date"
+        android:textSize="18sp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/descriet" />
+        app:layout_constraintTop_toBottomOf="@+id/descriet"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/dataTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data"
-        android:layout_marginLeft="30dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="230dp"
         android:layout_marginBottom="230dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="230dp"
+        android:text="Data"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tipo"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/createbt"
@@ -76,36 +79,38 @@
         android:id="@+id/disciet"
         android:layout_width="216dp"
         android:layout_height="47dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginTop="95dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="27dp"
+        android:textSize="18sp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="95dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="27dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/descriet"
         android:layout_width="324dp"
         android:layout_height="44dp"
+        android:layout_marginBottom="11dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Descrição"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/dataTV"
-        app:layout_constraintRight_toRightOf="@+id/disciet"
-        android:layout_marginTop="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/disciet"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintLeft_toLeftOf="@+id/dataTV"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintLeft_toLeftOf="@+id/dataTV"
+        app:layout_constraintRight_toRightOf="@+id/disciet"
+        app:layout_constraintTop_toBottomOf="@+id/disciet"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Spinner
         android:id="@+id/tipo"
