--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -4,85 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.marialage.trabalhofinal.Detalhes">
+    tools:context="com.example.marialage.trabalhofinal.Detalhes"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/disciDeta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="24dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/descDeta"
-        app:layout_constraintRight_toRightOf="@+id/spinner"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/descDeta"
+        android:layout_marginTop="82dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/descDeta"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/descDeta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
-        app:layout_constraintLeft_toLeftOf="@+id/disciDeta"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/btGoogle"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/disciDeta"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/editText3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
-        android:layout_marginTop="183dp"
+        android:layout_marginEnd="27dp"
         android:ems="10"
         android:inputType="date"
         android:textSize="18sp"
+        android:layout_marginRight="27dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/descDeta" />
 
     <Button
         android:id="@+id/btedit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="58dp"
         android:text="Editar"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginEnd="20dp"
+        app:layout_constraintRight_toLeftOf="@+id/btdelete"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btdelete"
+        tools:layout_constraintBaseline_creator="1" />
 
     <Button
         android:id="@+id/btdelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="93dp"
+        android:layout_height="58dp"
         android:text="Apagar"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="59dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btedit"
-        tools:layout_constraintBaseline_creator="1" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="216dp"
-        android:layout_height="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/disciDeta"
-        android:layout_marginTop="33dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="181dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="181dp"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="216dp"
+        android:layout_height="24dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/disciDeta"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="28dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -93,45 +102,59 @@
         android:textSize="18sp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintRight_toRightOf="@+id/textView2"
-        android:layout_marginTop="59dp"
+        android:layout_marginTop="91dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="50dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/spinner" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="84dp"
         android:layout_height="27dp"
-        android:layout_marginLeft="26dp"
         android:text="Descrição"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="28dp"
+        app:layout_constraintRight_toLeftOf="@+id/editText3"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="138dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/editText3"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="22dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/btGoogle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteY="279dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_width="113dp"
+        android:layout_height="67dp"
+        android:text="Pesquisa Disciplina"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btdelete"
+        tools:layout_constraintBaseline_creator="1" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="352dp"
-        android:layout_height="156dp"
-        android:layout_marginLeft="16dp"
-        android:text="TextView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="344dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text=""
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="22dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btGoogle"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
