--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="95dp"
         android:text="Disciplina"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
@@ -43,6 +44,7 @@
         android:layout_marginTop="23dp"
         android:text="Data"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descrietEditTe"
         tools:layout_constraintLeft_creator="1"
@@ -52,19 +54,20 @@
         android:id="@+id/editTe"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:text="Guardar"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="31dp"
-        app:layout_constraintRight_toRightOf="@+id/dataEditTe"
-        android:layout_marginTop="89dp"
-        tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="94dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="89dp"
+        android:text="Guardar"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/dataEditTe" />
+        app:layout_constraintRight_toRightOf="@+id/dataEditTe"
+        app:layout_constraintTop_toTopOf="@+id/dataEditTe"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tipotvEditTe"
@@ -74,6 +77,7 @@
         android:layout_marginTop="34dp"
         android:text="Tipo"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
@@ -133,6 +137,7 @@
         android:layout_marginStart="30dp"
         android:text="Descrição"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/descrietEditTe"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintBottom_creator="1"
