--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -4,19 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.marialage.trabalhofinal.Create">
+    tools:context="com.example.marialage.trabalhofinal.Create"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/disci"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="63dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="61dp"
         android:text="Disciplina"
         android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tipotv"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
@@ -25,108 +30,128 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="83dp"
         android:ems="10"
         android:inputType="date"
         android:textSize="18sp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/createbt"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="44dp"
         app:layout_constraintTop_toBottomOf="@+id/descriet"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_marginBottom="43dp" />
 
     <TextView
         android:id="@+id/dataTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="230dp"
-        android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="42dp"
         android:text="Data"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tipo"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/descriet"
+        tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/createbt"
-        android:layout_width="303dp"
-        android:layout_height="55dp"
+        android:layout_width="0dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="77dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginStart="36dp"
         android:text="Adicionar"
+        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+        android:textColorHint="@color/colorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.37"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="94dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/tipotv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tipo"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="30dp"
         android:layout_marginTop="34dp"
-        tools:layout_constraintLeft_creator="1"
+        android:text="Tipo"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/disciet"
-        android:layout_width="216dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginTop="95dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
         android:textSize="18sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <EditText
-        android:id="@+id/descriet"
-        android:layout_width="324dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="11dp"
-        android:layout_marginTop="17dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Descrição"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/dataTV"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="@+id/dataTV"
-        app:layout_constraintRight_toRightOf="@+id/disciet"
-        app:layout_constraintTop_toBottomOf="@+id/disciet"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <Spinner
-        android:id="@+id/tipo"
-        android:layout_width="0dp"
-        android:layout_height="34dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/disciet"
-        app:layout_constraintRight_toRightOf="@+id/disciet"
-        android:layout_marginTop="34dp"
+        app:layout_constraintBottom_toBottomOf="@+id/disci"
+        app:layout_constraintRight_toRightOf="@+id/tipo"
+        app:layout_constraintTop_toBottomOf="@+id/disci"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="27dp"
-        app:layout_constraintLeft_toLeftOf="@+id/disciet"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintLeft_toLeftOf="@+id/tipo" />
+
+    <EditText
+        android:id="@+id/descriet"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="29dp"
+        app:layout_constraintBottom_toBottomOf="@+id/createbt"
+        android:layout_marginEnd="29dp"
+        android:layout_marginTop="191dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="189dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/tipo"
+        android:layout_width="217dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="26dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/disci"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="34dp"
+        android:layout_marginBottom="38dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="11dp"
+        android:layout_marginStart="1dp"
+        android:text="Descrição"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/descriet"
+        app:layout_constraintLeft_toLeftOf="@+id/descriet"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
