--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -16,11 +16,10 @@
         android:textSize="18sp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/descDeta"
-        android:layout_marginTop="82dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/descDeta"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="86dp"
+        app:layout_constraintRight_toRightOf="@+id/btdelete"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/btdelete" />
 
     <TextView
         android:id="@+id/descDeta"
@@ -28,15 +27,13 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="18sp"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/btGoogle"
+        app:layout_constraintRight_toRightOf="@+id/disciDeta"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/disciDeta"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/textView2" />
+        app:layout_constraintLeft_toLeftOf="@+id/disciDeta" />
 
     <EditText
         android:id="@+id/editText3"
@@ -46,51 +43,54 @@
         android:ems="10"
         android:inputType="date"
         android:textSize="18sp"
-        android:layout_marginRight="27dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/btGoogle"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/descDeta" />
+        android:layout_marginBottom="23dp" />
 
     <Button
         android:id="@+id/btedit"
         android:layout_width="0dp"
         android:layout_height="58dp"
+        android:layout_marginEnd="7dp"
         android:text="Editar"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintRight_toLeftOf="@+id/btdelete"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btdelete"
-        tools:layout_constraintBaseline_creator="1" />
-
-    <Button
-        android:id="@+id/btdelete"
-        android:layout_width="93dp"
-        android:layout_height="58dp"
-        android:text="Apagar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintRight_toLeftOf="@+id/editText3"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="181dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="181dp"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        android:layout_marginTop="23dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        android:layout_marginBottom="29dp" />
+
+    <Button
+        android:id="@+id/btdelete"
+        android:layout_width="88dp"
+        android:layout_height="56dp"
+        android:background="@android:drawable/ic_delete"
+        android:text=""
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="216dp"
-        android:layout_height="24dp"
+        android:layout_width="0dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="28dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/disciDeta"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="28dp"
+        app:layout_constraintRight_toRightOf="@+id/disciDeta"
+        android:layout_marginTop="30dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="27dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -100,60 +100,70 @@
         android:layout_height="23dp"
         android:text="Disciplina"
         android:textSize="18sp"
+        android:textStyle="bold"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintRight_toRightOf="@+id/textView2"
-        android:layout_marginTop="91dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/btdelete"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="26dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="84dp"
         android:layout_height="27dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginStart="30dp"
         android:text="Descrição"
         android:textSize="18sp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="28dp"
+        android:textStyle="bold"
         app:layout_constraintRight_toLeftOf="@+id/editText3"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toBottomOf="@+id/btedit"
+        android:layout_marginTop="146dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="22dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginBottom="145dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btGoogle"
-        android:layout_width="113dp"
-        android:layout_height="67dp"
+        android:layout_width="130dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="13dp"
         android:text="Pesquisa Disciplina"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btdelete"
-        tools:layout_constraintBaseline_creator="1" />
+        android:textSize="18sp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/editText3"
+        android:layout_marginTop="188dp"
+        app:layout_constraintTop_toBottomOf="@+id/btdelete"
+        android:layout_marginBottom="187dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text=""
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="23dp"
         app:layout_constraintTop_toBottomOf="@+id/btGoogle"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
 
