--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,44 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.marialage.trabalhofinal.MainActivity">
+    tools:context="com.example.marialage.trabalhofinal.MainActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Button
         android:id="@+id/testesbt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="158dp"
+        android:layout_height="82dp"
+        android:background="?attr/colorControlActivated"
         android:text="Testes"
+        android:textSize="24sp"
+        android:textStyle="bold"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="99dp"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="69dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/trabalhosbt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="154dp"
+        android:layout_height="82dp"
+        android:background="?attr/colorControlActivated"
         android:text="Trabalhos"
+        android:textSize="24sp"
+        android:textStyle="bold"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/testesbt"
-        android:layout_marginEnd="65dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/testesbt" />
+        android:layout_marginTop="23dp"
+        app:layout_constraintTop_toBottomOf="@+id/testesbt"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/create"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="84dp"
         android:text="Adicionar Teste/Trabalho"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginTop="60dp"
-        app:layout_constraintTop_toBottomOf="@+id/trabalhosbt"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="23dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="23dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="111dp" />
 
 </android.support.constraint.ConstraintLayout>
